--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: deeppink;
+    color: rgb(67, 255, 20);
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
